# divider

./: Cargo.toml  README.md  Rocket.toml  test_ledger.json
docs/: roadmap.md
resources/: ledgers.json  server.toml  test_ledger.json
src/: lib.rs  main.rs
src/backend/: interface.rs  json_store.rs  mod.rs
src/core/: error.rs  ledger.rs  mod.rs  transaction.rs  user.rs
src/server/: error.rs  server.rs  server_config.rs
