[package]
name = "divider"
version = "0.1.0"
edition = "2021"
authors=["Dan Seremet", ]
description="Divide up a set of bills in a group"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.0"
rstest = "0.15"
clap = { version = "3.2", features = ["derive"] }
colored = "2.0"
