[package]
name = "divider"
version = "0.1.0"
edition = "2021"
authors=["Dan Seremet", ]
description="Divide up a set of bills in a group"

[[bin]]
name="divider-cli"
path="src/bin/cli.rs"

[[bin]]
name="divider-srv"
path="src/server/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.0"
rstest = "0.15"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
chrono = "0.4"
rocket = { version = "0.5.0", features = ["json"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
